# kaitai_fs

./: .editorconfig  .gitignore  README.rst  kaitai_simple_fs.py  kaitai_tree_fs.py  kaitaifs.py  requirements.txt  setup.cfg  setup.py
examples/: test.rar
fs/: heroes_of_might_and_magic_agg_fs.py  iso9660_fs.py  quake_pak_fs.py  rar_fs.py
kaitaifs/: __main__.py  cli.py  generic.py  kaitai_simple_fs.py  kaitai_tree_fs.py
kaitaifs/fs/: AnyKSFS.py  heroes_of_might_and_magic_agg_fs.py  iso9660_fs.py  quake_pak_fs.py  rar_fs.py
kaitaifs/parser/: heroes_of_might_and_magic_agg.py  iso9660.py  quake_pak.py  rar.py
