[metadata]
name = kaitaifs
version = 0.1.0
url = https://github.com/kaitai-io/kaitai_fs
long_description = file: README.rst
license = GPL-3.0+

[options.entry_points]
console_scripts = kaitaifs = kaitaifs.cli:main

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires = setuptools_scm;
install_requires =
    enum34
    fusepy
    kaitaistruct

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
